# Solar

./: .gitignore  CMakeLists.txt  Makefile  README.md
doc/: Doxyfile
doc/html/: annotated.html  class_solar_1_1_a_entity_script-members.html  class_solar_1_1_a_entity_script.html  class_solar_1_1_a_scene_script-members.html  class_solar_1_1_a_scene_script.html  class_solar_1_1_a_world_script-members.html  class_solar_1_1_a_world_script.html  class_solar_1_1_component-members.html  class_solar_1_1_component.html  class_solar_1_1_core-members.html  class_solar_1_1_core.html  class_solar_1_1_entity-members.html  class_solar_1_1_entity.html  class_solar_1_1_entity_vector-members.html  class_solar_1_1_entity_vector.html  class_solar_1_1_indexer-members.html  class_solar_1_1_indexer.html  class_solar_1_1_inner_core-members.html  class_solar_1_1_inner_core.html  class_solar_1_1_scene-members.html  class_solar_1_1_scene.html  class_solar_1_1_system-members.html  class_solar_1_1_system.html  class_solar_1_1_system_1_1_event-members.html  class_solar_1_1_system_1_1_event.html  class_solar_1_1_system_list-members.html  class_solar_1_1_system_list.html  class_solar_1_1_time_idx-members.html  class_solar_1_1_time_idx.html  class_solar_1_1_vector-members.html  class_solar_1_1_vector.html  class_solar_1_1_world-members.html  class_solar_1_1_world.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  functions.html  functions_func.html  index.html  namespace_solar.html  (+1 more)
doc/xml/: _a_entity_script_8cpp.xml  _a_entity_script_8hpp.xml  _a_scene_script_8cpp.xml  _a_scene_script_8hpp.xml  _a_world_script_8cpp.xml  _a_world_script_8hpp.xml  _component_8hpp.xml  _core_8cpp.xml  _core_8hpp.xml  _entity_8cpp.xml  _entity_8hpp.xml  _entity_vector_8cpp.xml  _entity_vector_8hpp.xml  _indexer_8cpp.xml  _indexer_8hpp.xml  _inner_core_8cpp.xml  _inner_core_8hpp.xml  _main_page_8md.xml  _scene_8cpp.xml  _scene_8hpp.xml  _system_8cpp.xml  _system_8hpp.xml  _system_list_8cpp.xml  _system_list_8hpp.xml  _time_idx_8hpp.xml  _vector_8hpp.xml  _world_8cpp.xml  (+22 more)
include/: AEntityScript.hpp  ASceneScript.hpp  AWorldScript.hpp  Component.hpp  Core.hpp  Entity.hpp  Indexer.hpp  InnerCore.hpp  Scene.hpp  System.hpp  SystemList.hpp  TimeIdx.hpp  Vector.hpp  World.hpp
src/: AEntityScript.cpp  ASceneScript.cpp  AWorldScript.cpp  Core.cpp  Entity.cpp  Indexer.cpp  InnerCore.cpp  Scene.cpp  System.cpp  SystemList.cpp  World.cpp
test/: CMakeLists.txt
test/include/: BenchmarkResult.hpp  Direction.hpp  MemoryInfo.hpp  Movement.hpp  Position.hpp  TestComponent.hpp  TestSystem.hpp  TimeInfo.hpp
test/src/: BenchmarkResult.cpp  Direction.cpp  MemoryInfo.cpp  Movement.cpp  Position.cpp  TestComponent.cpp  TestSystem.cpp  TimeInfo.cpp  main.cpp
(+21 files in other folders)
